# laserstructurescan

./: README.md  default.nix  flake.nix  lock.json  process_images.py  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 05yb0d179k1pw74yxnlhdq9ld30yp9pk-source  2b37dgz6nxcqdp2389fg91kxirhfxzi2-source  6q5b11kr46mrvipv2fm6wx2qnvsdi8mh-source  fpr5fsl88azrdsbzjpfq2hk307bbr7cm-source  nmf1ggxf77gzv7cw5h91d6l1wh4y6qyj-source  sph6h65la1zv6200vs1cw9j212jc2wiy-source
