[project]
name = "laserstructurescan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "purepani", email = "pani0028@umn.edu"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "opencv-contrib-python>=4.9.0.80",
    "scipy>=1.12.0",
    "pdm>=2.12.4",
    "matplotlib>=3.8.3",
    "tornado>=6.4",
    "einops>=0.7.0",
    "jupyter>=1.0.0",
    "ipympl>=0.9.3",
    "ipywidgets>=8.1.2",
    "plotly>=5.19.0",
    "jupyter-dash>=0.4.2",
    "dash>=2.16.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
